# oscipi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  run_gui.bat  run_gui.sh
.github/workflows/: pico_ci.yml
cmake/: freertos_import.cmake  pico_sdk_import.cmake  unity_import.cmake
gui/: main_ui.py
scripts/: build_firmware.ps1  flash_pico.ps1  run_tests.ps1
src/: FreeRTOSConfig.h  blink.c  main.c  osc_comm.c  osc_comm.h  osc_dma.c  osc_dma.h  osc_processing.c  osc_processing.h  osc_types.h
test/: pico_stubs.h  test_blink.c  test_main.c
